--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -60,7 +60,7 @@ spec:
       project: expense
       tier: db # has to match .spec.template.metadata.labels
   serviceName: "nginx-headless"
-  replicas: 3 # by default is 1
+  #replicas: 3 # by default is 1
   minReadySeconds: 10 # by default is 0
   template:
     metadata:
